test/error/ast/RelationExprDifferenTypes.mod
MODULE RelationExprDifferenTypes;
VAR a: INTEGER; b: REAL; t: BOOLEAN;
BEGIN
  t := a = b;
END RelationExprDifferenTypes.
